--- a/index02.html
+++ b/index02.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <script src="./script.js"></script>
+    <script src="./scrpt02.js"></script>
 
 </body>
 
